plugins {
    id 'java'
}

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}


jar {
    manifest {
        attributes "Main-Class" : 'net.heretical_camelid.maneline.desktop_app.CommandLineInterface'
        attributes "Implementation-Version" : "$rootProject.ext.versionName"
    }

    doFirst {
        from(
            configurations.runtimeClasspath.collect {
                it.isDirectory()
                ?
                it : zipTree(it).matching {

                    include 'META-INF/**'
                    exclude 'META-INF/*.SF'
                    exclude 'META-INF/*.DSA'
                    exclude 'META-INF/*.RSA'

                    include 'net/heretical_camelid/maneline/lib/**'

                    include 'ch/qos/**'
                    include 'org/hid4java/**'
                    include 'org/json/**'
                    include 'org/slf4j/**'
                    include 'module-info.class'
                    include 'resources/**'
                    include 'logback.xml'

                    include 'linux-amd64/**'
                    include 'linux-x86-64/**'
                    include 'linux-aarch64/**'
                    include 'darwin-x86-64/**'

                    include 'com/sun/jna/ptr/**'
                    include 'com/sun/jna/internal/**'
                    include 'com/sun/jna/linux-x86-64/**'
                    include 'com/sun/jna/linux-aarch64/**'
                    include 'com/sun/jna/darwin-x86-64/**'
                    include 'com/sun/jna/*.class'

                    include 'com/github/hypfvieh/**'
                    include 'org/freedesktop/**'
                    include 'org/bluez/**'
                    include 'com/kohlschutter/**'
                    include 'org/newsclub/**'

                    include '**'

                    /*
                    Paths for dependencies which have been used
                    in the past but may not be required or useful
                    include 'com/kohlschutter/junixsocket/**'
                    include 'tinyb/**'
                    include 'org/sputnikdev/**'
                    include 'native/linux/x86_64/**'
                    */
                }
            }
        )
    }
    from('..') {
        include "LICENSE"
        include "assets/copyright_and_warranty.txt"
        include "assets/warranty_disclaimer.txt"
        include "assets/dtcli_usage.txt"
        include "assets/dtcli_interactive_help.txt"
        include "assets/50-fhau.rules"
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    dependsOn(':maneline-lib:jar')
}

base {
    archivesName = "maneline-cli-$rootProject.ext.versionName"
}

dependencies {
    implementation project(':maneline-lib') 
    implementation 'net.java.dev.jna:jna:5.18.1'
    implementation 'org.hid4java:hid4java:0.8.0'
    implementation 'org.json:json:20251224'
    implementation 'ch.qos.logback:logback-classic:1.5.32'

    implementation 'com.github.hypfvieh:dbus-java-parent:5.2.0'
    implementation 'com.github.hypfvieh:bluez-dbus:0.3.2'
    implementation 'com.github.hypfvieh:java-utils-extended:1.0.7'

    // Start of dependencies related to junixsocket transport option
    // Note that transitive dependencies on junixsocket-core are poisonous,
    // with a gradle error related to packages which are published on MavenCentral
    // as a .pom file only with no accompanying .jar file.
    // Because of this, we need to exclude junixsocket-core for every package
    // which has it listed in its pom.xml.

    // It is possible to run a self-test of junixsocket features using the followign command line:
    // java -cp desktop-app/build/libs/maneline-cli-0.0.0.jar org.newsclub.net.unix.selftest.nativeimage.Main

    implementation ('com.github.hypfvieh:dbus-java-transport-junixsocket:5.2.0') {
        exclude group: 'com.kohlschutter.junixsocket', module: 'junixsocket-core'
    }
    implementation ('com.kohlschutter.junixsocket:junixsocket-selftest-native-image:2.10.1') {
        exclude group: 'com.kohlschutter.junixsocket', module: 'junixsocket-core'
    }
    implementation ('com.kohlschutter.junixsocket:junixsocket-vsock:2.10.1') {
        exclude group: 'com.kohlschutter.junixsocket', module: 'junixsocket-core'
    }
    implementation ('com.kohlschutter.junixsocket:junixsocket-tipc:2.10.1') {
        exclude group: 'com.kohlschutter.junixsocket', module: 'junixsocket-core'
    }
    implementation 'com.kohlschutter.junixsocket:junixsocket-common:2.10.1'
    implementation 'com.kohlschutter.junixsocket:junixsocket-native-common:2.10.1'
    implementation 'com.kohlschutter.junixsocket:junixsocket-native-common:2.10.1'

    // end of material related to junixsocket transport
}
